--- a/styles/main_styles.css
+++ b/styles/main_styles.css
@@ -1721,3 +1721,88 @@ section
 #password-reset {
 	color: #32c69a;
 }
+
+
+.nav-bar {
+    width: 100%;
+    background: #32c69a;
+    height: 70px;
+    padding: 10px 0;
+    box-sizing: 1px solid #1a252f;
+}
+
+.nav-bar ul {
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+    list-style: none;
+    text-transform: uppercase;
+    font-weight: bold;
+    letter-spacing: 2px;
+    position: relative;
+}
+
+.nav-bar ul li {
+    width: 120px;
+    float: left;
+    text-align: center;
+    padding: 15px 0;
+    color: #fff;
+    margin-right: 10px;
+    cursor: pointer;
+    transition: all 0.4s ease;
+}
+
+.nav-bar ul li:last-child {
+    margin-right: 0;
+
+}
+
+.nav-bar ul li:hover .mega-menu {
+    color: #fff;
+}
+
+.nav-bar ul li .mega-menu p:hover {
+    color: #fff;
+    font-weight: bold;
+}
+
+.header-banner {
+    background: #18bc9c;
+    width: 100%;
+    height: 350px;
+}
+
+.mega-menu {
+    position: absolute;
+    top: 30px;
+    left: 0;
+    width: 1000px;
+    height: 470px;
+    background: #32c69a;
+    padding: 30px;
+    transition: all 0.4s ease;
+    box-sizing: border-box;
+    display: none;
+}
+
+.inner-mega-menu {
+    width: 23%;
+    float: left;
+    margin-right: 1%;
+}
+
+.inner-mega-menu:last-child {
+    margin-right: 0%;
+}
+
+.inner-mega-menu p {
+    padding: 10% 0;
+    transition: all 0.4s ease;
+    color: #fff;
+}
+
+.nav-bar ul li:hover .mega-menu{
+    display: block;
+    opacity: 1;
+}
