--- a/styles/main_styles.css
+++ b/styles/main_styles.css
@@ -1777,27 +1777,29 @@ section
     position: absolute;
     top: 30px;
     left: 0;
-    width: 1000px;
-    height: 470px;
+    width: 100%;
+    height: 500px;
     background: #32c69a;
     padding: 30px;
     transition: all 0.4s ease;
     box-sizing: border-box;
     display: none;
+    scroll-behavior: smooth;
+    overflow-y: scroll;
 }
 
 .inner-mega-menu {
-    width: 23%;
+    width: 17%;
     float: left;
-    margin-right: 1%;
+    margin-right: 45px;
+    text-align: left;
 }
 
 .inner-mega-menu:last-child {
-    margin-right: 0%;
+    margin-right: -20%;
 }
 
 .inner-mega-menu p {
-    padding: 10% 0;
     transition: all 0.4s ease;
     color: #fff;
 }
@@ -1806,3 +1808,4 @@ section
     display: block;
     opacity: 1;
 }
+
