--- a/styles/contact.css
+++ b/styles/contact.css
@@ -76,7 +76,6 @@ p a
 	display: inline;
 	position: relative;
 	color: inherit;
-	border-bottom: solid 1px #ffa07f;
 	-webkit-transition: all 200ms ease;
 	-moz-transition: all 200ms ease;
 	-ms-transition: all 200ms ease;
@@ -97,12 +96,12 @@ a, a:hover, a:visited, a:active, a:link
 p a:active
 {
 	position: relative;
-	color: #FF6347;
+	color: inherit !important;
 }
 p a:hover
 {
 	color: #FFFFFF;
-	background: #ffa07f;
+	background: inherit;
 }
 p a:hover::after
 {
@@ -1670,3 +1669,109 @@ section
 	color: #FFFFFF;
 	line-height: 42px;
 }
+
+/**
+	LOGIN MODAL
+**/
+
+#login-modal {
+	border-radius: unset !important;
+	background-color: #f4f8fb !important;
+	padding: 12px;
+}
+
+#password-reset {
+	color: #32c69a;
+}
+
+
+.nav-bar {
+    width: 100%;
+    background: #32c69a;
+    height: 70px;
+    padding: 10px 0;
+    box-sizing: 1px solid #1a252f;
+}
+
+.nav-bar ul {
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+    list-style: none;
+    text-transform: uppercase;
+    font-weight: bold;
+    letter-spacing: 2px;
+    position: relative;
+}
+
+.nav-bar ul li {
+    width: 120px;
+    float: left;
+    text-align: center;
+    padding: 15px 0;
+    color: #fff;
+    margin-right: 10px;
+    cursor: pointer;
+    transition: all 0.4s ease;
+}
+
+.nav-bar ul li:last-child {
+    margin-right: 0;
+
+}
+
+.nav-bar ul li:hover .mega-menu {
+    color: #fff;
+}
+
+.nav-bar ul li .mega-menu p:hover {
+    color: #fff;
+    font-weight: bold;
+}
+
+.header-banner {
+    background: #18bc9c;
+    width: 100%;
+    height: 350px;
+}
+
+.mega-menu {
+    position: absolute;
+    top: 30px;
+    left: 0;
+    width: 100%;
+    height: 500px;
+    background: #32c69a;
+    padding: 30px;
+    transition: all 0.4s ease;
+    box-sizing: border-box;
+    display: none;
+    scroll-behavior: smooth;
+    overflow-y: scroll;
+}
+
+.inner-mega-menu {
+    width: 17%;
+    float: left;
+    margin-right: 42px;
+    text-align: left;
+}
+
+.inner-mega-menu:last-child {
+    margin-right: -20%;
+}
+
+.inner-mega-menu p {
+    transition: all 0.4s ease;
+    color: #fff;
+    font-size: 12px;
+}
+
+.nav-bar ul li:hover .mega-menu{
+    display: block;
+    opacity: 1;
+}
+
+
+
+
