--- a/styles/main_styles.css
+++ b/styles/main_styles.css
@@ -76,7 +76,6 @@ p a
 	display: inline;
 	position: relative;
 	color: inherit;
-	border-bottom: solid 1px #ffa07f;
 	-webkit-transition: all 200ms ease;
 	-moz-transition: all 200ms ease;
 	-ms-transition: all 200ms ease;
@@ -97,12 +96,12 @@ a, a:hover, a:visited, a:active, a:link
 p a:active
 {
 	position: relative;
-	color: #FF6347;
+	color: inherit !important;
 }
 p a:hover
 {
 	color: #FFFFFF;
-	background: #ffa07f;
+	background: inherit;
 }
 p a:hover::after
 {
@@ -1802,6 +1801,7 @@ section
 .inner-mega-menu p {
     transition: all 0.4s ease;
     color: #fff;
+    font-size: 12px;
 }
 
 .nav-bar ul li:hover .mega-menu{
@@ -1809,3 +1809,6 @@ section
     opacity: 1;
 }
 
+.inner-mega-menu a {
+    text-decoration: none;
+}
