--- a/styles/contact.css
+++ b/styles/contact.css
@@ -857,10 +857,13 @@ section
 {
 	width: 100%;
 	background: #f4f8fb;
+	margin-top: 30px;
 }
 .info_image
 {
 	width: 100%;
+	margin: auto;
+	text-align: center;
 }
 .info_image img
 {
@@ -1096,7 +1099,7 @@ section
 }
 .contact_button
 {
-	width: 275px;
+	width: 263px;
 	height: 54px;
 	background: #32c69a;
 	border: none;
@@ -1776,4 +1779,274 @@ section
 	display: none; 
 }
 
+/*********************************
+10. FAQ
+*********************************/
 
+.stuff
+{
+	width: 100%;
+	background: #f4f8fb;
+	padding-top: 99px;
+	padding-bottom: 104px;
+}
+.faq_title
+{
+	font-size: 36px;
+	font-weight: 600;
+	color: #404040;
+	line-height: 0.75;
+}
+.faq_subtitle
+{
+	font-size: 11px;
+	font-weight: 600;
+	color: #838383;
+	text-transform: uppercase;
+	letter-spacing: 0.2em;
+	line-height: 0.75;
+	margin-top: 23px;
+}
+.elements_accordions_tabs
+{
+	margin-top: 115px;
+}
+.elements_accordions
+{
+	width: 100%;
+}
+.accordions_tabs
+{
+	width: 100%;
+	background: #FFFFFF;
+	margin-top: 100px;
+}
+.accordions
+{
+	margin-top: 80px;
+}
+.accordion_container:not(:last-child)
+{
+	margin-bottom: 14px;
+}
+.accordion
+{
+	height: 49px;
+	width: 100%;
+	background: #FFFFFF;
+	padding-left: 70px;
+	cursor: pointer;
+	color: #404040;
+	font-size: 14px;
+	font-weight: 600;
+	-webkit-transition: all 200ms ease;
+	-moz-transition: all 200ms ease;
+	-ms-transition: all 200ms ease;
+	-o-transition: all 200ms ease;
+	transition: all 200ms ease;
+}
+.accordion div
+{
+	max-width: 90%;
+	overflow: hidden;
+	white-space: nowrap;
+}
+.accordion::after
+{
+	display: -webkit-box;
+	display: -moz-box;
+	display: -ms-flexbox;
+	display: -webkit-flex;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	position: absolute;
+	top: 50%;
+	-webkit-transform: translateY(-50%);
+	-moz-transform: translateY(-50%);
+	-ms-transform: translateY(-50%);
+	-o-transform: translateY(-50%);
+	transform: translateY(-50%);
+	left: 0;
+	width: 50px;
+	height: 100%;
+	content: '+';
+	background: #32c69a;
+	font-size: 14px;
+	color: #FFFFFF;
+	font-weight: 500;
+	-webkit-transition: all 200ms ease;
+	-moz-transition: all 200ms ease;
+	-ms-transition: all 200ms ease;
+	-o-transition: all 200ms ease;
+	transition: all 200ms ease;
+}
+.accordion.active
+{
+	background: #32c69a;
+	color: #FFFFFF;
+}
+.accordion.active::after
+{
+	content: '-';
+	color: #FFFFFF;
+	background: #404040;
+}
+.accordion_panel
+{
+	padding-right: 8px;
+	max-height: 0px;
+	overflow: hidden;
+	-webkit-transition: all 500ms ease;
+	-moz-transition: all 500ms ease;
+	-ms-transition: all 500ms ease;
+	-o-transition: all 500ms ease;
+	transition: all 500ms ease;
+}
+.accordion_panel > div
+{
+	padding-bottom: 11px;
+}
+.accordion_panel p
+{
+	font-size: 14px;
+	font-weight: 500;
+	padding-top: 35px;
+	color: #838383;
+	line-height: 2.14;
+}
+
+/*********************************
+11. Latest News
+*********************************/
+
+.news_title
+{
+	font-size: 36px;
+	font-weight: 600;
+	color: #404040;
+	line-height: 0.75;
+}
+.news_subtitle
+{
+	font-size: 11px;
+	font-weight: 600;
+	color: #838383;
+	text-transform: uppercase;
+	letter-spacing: 0.2em;
+	line-height: 0.75;
+	margin-top: 23px;
+}
+.news_container
+{
+	margin-top: 100px;
+}
+.latest:not(:last-child)
+{
+	margin-bottom: 23px;
+}
+.latest_image
+{
+	width: 73px;
+	height: 73px;
+}
+.latest_image img
+{
+	max-width: 100%;
+}
+.latest_content
+{
+	padding-left: 25px;
+}
+.latest_title
+{
+	margin-top: -3px;
+}
+.latest_title a
+{
+	font-size: 16px;
+	font-weight: 500;
+	color: #404040;
+	-webkit-transition: all 200ms ease;
+	-moz-transition: all 200ms ease;
+	-ms-transition: all 200ms ease;
+	-o-transition: all 200ms ease;
+	transition: all 200ms ease;
+}
+.latest_title a:hover
+{
+	color: #32c69a;
+}
+.latest_info
+{
+	margin-top: 1px;
+}
+.latest_info ul li
+{
+	position: relative;
+}
+.latest_info ul li:not(:last-child)::after
+{
+	content: '/';
+	margin-left: 3px;
+	margin-right: 2px;
+	font-size: 12px;
+	font-weight: 500;
+	color: #838383;
+}
+.latest_info ul li a
+{
+	font-size: 12px;
+	font-weight: 500;
+	color: #838383;
+	-webkit-transition: all 200ms ease;
+	-moz-transition: all 200ms ease;
+	-ms-transition: all 200ms ease;
+	-o-transition: all 200ms ease;
+	transition: all 200ms ease;
+}
+.latest_info ul li a:hover
+{
+	color: #32c69a;
+}
+.latest_comments
+{
+	margin-top: 6px;
+}
+.latest_comments a
+{
+	font-size: 12px;
+	font-weight: 500;
+	color: #32c69a;
+}
+
+.btnTransparencia {
+	border-style: solid;
+	border-color: #32c69a;
+	border-radius: 16px; 
+}
+
+.btnTransparencia a {
+	color: #32c69a; 
+}
+
+.btnAdminEntrdas {
+	margin-top: -54px;
+    display: flow-root;
+    margin-left: 283px;	
+}
+
+input#cargar {
+ width: 0.1px;
+ height: 0.1px;
+ opacity: 0;
+ overflow: hidden;
+ position: absolute;
+ z-index: -1;
+ }
+
+ .labelCargar {
+ 	text-align: center;
+    padding-top: 20px;
+ }
