--- a/styles/contact.css
+++ b/styles/contact.css
@@ -257,7 +257,7 @@ section
 {
 	width: 137px;
 	height: 54px;
-	background: #32c69a;
+	background: rgb(98, 199, 212);
 	overflow: hidden;
 }
 .button a
@@ -995,7 +995,7 @@ section
 {
 	width: 100%;
 	height: 54px;
-	background: #32c69a;
+	background:  rgb(98, 199, 212);
 	border: none;
 	outline: none;
 	color: #FFFFFF;
@@ -1101,7 +1101,7 @@ section
 {
 	width: 263px;
 	height: 54px;
-	background: #32c69a;
+	background: rgb(98, 199, 212);
 	border: none;
 	outline: none;
 	color: #FFFFFF;
@@ -1229,7 +1229,7 @@ section
 {
 	width: 100%;
 	height: 54px;
-	background: #32c69a;
+	background: rgb(98, 199, 212);
 	border: none;
 	outline: none;
 	color: #FFFFFF;
@@ -1439,7 +1439,7 @@ section
 {
 	width: 275px;
 	height: 54px;
-	background: #32c69a;
+	background: rgb(98, 199, 212);
 	border: none;
 	outline: none;
 	cursor: pointer;
@@ -1690,7 +1690,7 @@ section
 
 .nav-bar {
     width: 100%;
-    background: #5dc7d4;
+    background: rgb(98, 199, 212);
     height: 63px;
     padding: 10px 0;
     box-sizing: 1px solid #1a252f;
@@ -2036,7 +2036,9 @@ section
 .btnAdminEntrdas {
 	margin-top: -54px;
     display: flow-root;
-    margin-left: 283px;	
+    margin-left: 283px;
+    padding-top: 18px;
+	padding-left: 60px;	
 }
 
 input#cargar {
