--- a/styles/main_styles.css
+++ b/styles/main_styles.css
@@ -255,7 +255,7 @@ section
 {
 	width: 137px;
 	height: 54px;
-	background: #32c69a;
+	background: rgb(98, 199, 212);
 	overflow: hidden;
 }
 .button a
@@ -818,7 +818,7 @@ section
 .home_container
 {
 	position: absolute;
-	top: 38%;
+	top: 17%;
 	left: 0;
 	width: 100%;
 }
@@ -998,7 +998,7 @@ section
 {
 	width: 100%;
 	height: 54px;
-	background: #32c69a;
+	background: rgb(98, 199, 212);
 	border: none;
 	outline: none;
 	color: #FFFFFF;
@@ -1585,7 +1585,7 @@ section
 {
 	width: 275px;
 	height: 54px;
-	background: #32c69a;
+	background: rgb(98, 199, 212);
 	border: none;
 	outline: none;
 	cursor: pointer;
@@ -1724,7 +1724,7 @@ section
 
 .nav-bar {
     width: 100%;
-    background: #5dc7d4;
+    background: rgb(98, 199, 212);
     height: 63px;
     padding: 10px 0;
     box-sizing: 1px solid #1a252f;
